--- a/P4Analyst/AngularApp/ClientApp/src/index.html
+++ b/P4Analyst/AngularApp/ClientApp/src/index.html
@@ -14,3 +14,10 @@
     <app-root>Loading...</app-root>
   </body>
 </html>
+
+<script>
+  var NGXSTORE_CONFIG = {
+    prefix: 'p4Analyst_',
+    debugMode: false
+  };
+</script>
